--- a/centos-update.yml
+++ b/centos-update.yml
@@ -1,12 +1,8 @@
 ---
--
-  
-  name: "Upgrade all packages to the latest version"
-  tasks:
-    yum:
+- name: "Upgrade all packages to the latest version"
+  yum:
     name: '*'
     state: latest
--
-    name: "Reboot the machine (Wait for 5 min)"
-    reboot:
+- name: "Reboot the machine (Wait for 5 min)"
+  reboot:
         reboot_timeout: 300
