--- a/centos-update.yml
+++ b/centos-update.yml
@@ -1,8 +1,6 @@
 ---
-- name: "Upgrade all packages to the latest version"
+- name: Upgrade all packages
   yum:
     name: '*'
     state: latest
-- name: "Reboot the machine (Wait for 5 min)"
-  reboot:
-        reboot_timeout: 300
+	
