--- a/centos-update.yml
+++ b/centos-update.yml
@@ -1,6 +1,6 @@
----
-- name: Upgrade all packages
-  yum:
-    name: '*'
+--- 
+- 
+  name: "Upgrade all packages"
+  yum: 
+    name: "*"
     state: latest
-	
