--- a/centos-update.yml
+++ b/centos-update.yml
@@ -1,4 +1,7 @@
-- name: yum remove wget
-  yum:
-    name: wget
-    state: absent
+---
+- hosts: [mainserver]
+  remote_user: root
+  become: yes
+  tasks:
+        - name: install apache
+          yum: name=httpd state=present
