--- a/centos-update.yml
+++ b/centos-update.yml
@@ -3,5 +3,5 @@
   remote_user: root
   become: yes
   tasks:
-        - name: install apache
-          yum: name=httpd state=present
+        - name: Upgrade all packages
+          yum: name='*' state=latest
